syntax = "proto3";

package pesertabkn;

option go_package = "v1";

message PesertaData {
    string id = 1;
    string nip_baru = 2;
    string nip_lama = 3;
    string nama = 4;
    string gelar_depan = 5;
    string gelar_belakang = 6;
    string tempat_lahir = 7;
    string tempat_lahir_id = 8;
    string tgl_lahir = 9;
    string agama = 10;
    string email = 11;
    string nik = 12;
    string alamat = 13;
    string no_hp = 14;
    string no_telp = 15;
    string jenis_pegawai_id = 16;
    string jenis_pegawai_nama = 17;
    string kedudukan_pns_id = 18;
    string kedudukan_pns_nama = 19;
    string status_pegawai = 20;
    string tmt_pns = 21;
    string tmt_cpns = 22;
    string no_seri_karpeg = 23;
    string tk_pendidikan_terakhir_id = 24;
    string tk_pendidikan_terakhir = 25;
    string pendidikan_terakhir_id = 26;
    string pendidikan_terakhir_nama = 27;
    string tahun_lulus = 28;
    string instansi_induk_id = 29;
    string instansi_induk_nama = 30;
    string satuan_kerja_induk_id = 31;
    string satuan_kerja_induk_nama = 32;
    string kanreg_id = 33;
    string kanreg_nama = 34;
    string instansi_kerja_id = 35;
    string instansi_kerja_nama = 36;
    string instansi_kerja_kode_cepat = 37;
    string satuan_kerja_kerja_id = 38;
    string satuan_kerja_kerja_nama = 39;
    string unor_id = 40;
    string unor_nama = 41;
    string unor_induk_id = 42;
    string unor_induk_nama = 43;
    string jenis_jabatan_id = 44;
    string jenis_jabatan = 45;
    string jabatan_nama = 46;
    string jabatan_struktural_id = 47;
    string jabatan_struktural_nama = 48;
    string jabatan_fungsional_id = 49;
    string jabatan_fungsional_nama = 50;
    string jabatan_fungsional_umum_id = 51;
    string jabatan_fungsional_umum_nama = 52;
    string tmt_jabatan = 53;
    string eselon = 54;
    string eselon_id = 55;
    string eselon_level = 56;
    string tmt_eselon = 57;
    string lokasi_kerja_id = 58;
    string lokasi_kerja = 59;
    string gol_ruang_awal = 60;
    string gol_ruang_akhir_id = 61;
    string gol_ruang_akhir = 62;
    string tmt_gol_akhir = 63;
    string gaji_pokok = 64;
    string masa_kerja = 65;
    string no_spmt = 66;
    string tgl_spmt = 67;
    string jenis_kawin_id = 68;
    string status_perkawinan = 69;
    string jumlah_istri_suami = 70;
    string jumlah_anak = 71;
    string no_surat_keterangan_dokter = 72;
    string tgl_surat_keterangan_dokter = 73;
    string no_surat_keterangan_bebas_narkoba = 74;
    string tgl_surat_keterangan_bebas_narkoba = 75;
    string skck = 76;
    string tgl_skck = 77;
    string akte_kelahiran = 78;
    string status_hidup = 79;
    string akte_meninggal = 80;
    string tgl_meninggal = 81;
    string no_askes = 82;
    string no_taspen = 83;
    string no_npwp = 84;
    string tgl_npwp = 85;
    string bahasa = 86;
    string jenis_kelamin = 87;
    string kode_pos = 88;
}